tests/ui/rustdoc/check-doc-alias-attr-location.stderr
error: `#[doc]` attribute cannot be used on function params
  --> $DIR/check-doc-alias-attr-location.rs:22:12
   |
LL |     fn foo(#[doc(alias = "qux")] _x: u32) -> Self::X {
   |            ^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[doc]` can be applied to associated consts, associated types, const parameters, const parameters, constants, crates, data types, enum variants, extern crates, foreign modules, foreign statics, functions, global asms, impl blocks, lifetime parameters, lifetime parameters, macro calls, macro defs, match arms, modules, pattern fields, statics, struct fields, struct fields, trait aliases, traits, type aliases, type parameters, type parameters, unions, use statements, and where predicates

error: `#[doc(alias = "...")]` isn't allowed on foreign module
  --> $DIR/check-doc-alias-attr-location.rs:9:15
   |
LL | #[doc(alias = "foo")]
   |               ^^^^^

error: `#[doc(alias = "...")]` isn't allowed on implementation block
  --> $DIR/check-doc-alias-attr-location.rs:12:15
   |
LL | #[doc(alias = "bar")]
   |               ^^^^^

error: `#[doc(alias = "...")]` isn't allowed on implementation block
  --> $DIR/check-doc-alias-attr-location.rs:18:15
   |
LL | #[doc(alias = "foobar")]
   |               ^^^^^^^^

error: `#[doc(alias = "...")]` isn't allowed on type alias in implementation block
  --> $DIR/check-doc-alias-attr-location.rs:20:19
   |
LL |     #[doc(alias = "assoc")]
   |                   ^^^^^^^

error: `#[doc(alias = "...")]` isn't allowed on statement
  --> $DIR/check-doc-alias-attr-location.rs:24:23
   |
LL |         #[doc(alias = "stmt")]
   |                       ^^^^^^

error: `#[doc(alias = "...")]` isn't allowed on expression
  --> $DIR/check-doc-alias-attr-location.rs:27:23
   |
LL |         #[doc(alias = "expr")]
   |                       ^^^^^^

error: `#[doc(alias = "...")]` isn't allowed on match arm
  --> $DIR/check-doc-alias-attr-location.rs:30:27
   |
LL |             #[doc(alias = "arm")]
   |                           ^^^^^

error: aborting due to 8 previous errors

